--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "scene-release": "1.*",
+    "parse-torrent-name": "*",
+    "xmlrpc": "1.3.*",
+    "q": "*"
   }
 }
