--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodetest2",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
-  "main": "./bin/www",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon ./bin/www"
   },
