--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.html",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nw ."
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -12,7 +12,8 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
-    "material-design-lite": "^1.0.0-3",
+    "material-design-lite": "*",
+    "material-design-icons": "*",
     "morgan": "~1.5.3",
     "parse-torrent-name": "*",
     "q": "*",
@@ -20,11 +21,14 @@
     "scene-release": "1.*",
     "serve-favicon": "~2.2.1",
     "xmlrpc": "1.3.*",
-    "material-design-icons": "*",
-    "material-design-lite": "*"
+    "object.observe": "*",
+    "observed": "*"
+  },
+  "devDependencies": {
+    "less": "*"
   },
   "window": {
-    "title": "Felirat",
+    "title": "DogTitle",
     "transparent": false,
     "frame": true,
     "toolbar": false,
