--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,10 @@
     "material-design-lite": "*",
     "material-design-icons": "*",
     "morgan": "~1.5.3",
-    "parse-torrent-name": "*",
     "q": "*",
     "request": "*",
+    "movie-title": "*",
+    "parse-torrent-name": "*",
     "scene-release": "1.*",
     "serve-favicon": "~2.2.1",
     "xmlrpc": "1.3.*",
