--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
-    "material-design-lite": "*",
+    "material-design-lite": "1.0.0-3",
     "material-design-icons": "*",
     "morgan": "~1.5.3",
-    "q": "*",
+    "q": "1.*",
     "request": "*",
     "movie-title": "*",
     "parse-torrent-name": "*",
@@ -23,7 +23,8 @@
     "serve-favicon": "~2.2.1",
     "xmlrpc": "1.3.*",
     "object.observe": "*",
-    "observed": "*"
+    "observed": "*",
+    "opensubtitles-client": "*"
   },
   "devDependencies": {
     "less": "*"
