--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,9 @@
     "xmlrpc": "1.3.*",
     "object.observe": "*",
     "observed": "*",
-    "opensubtitles-client": "*"
+    "opensubtitles-client": "*",
+    "angular-material": "0.10.*",
+    "md5": "2.*"
   },
   "devDependencies": {
     "less": "*"
