--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,17 @@
   "scripts": {
     "start": "nw --remote-debugging-port=9090"
   },
+  "packages": {
+    "mac": {
+      "url": "http://localhost:3000/releases/updapp/mac/updapp.zip"
+    },
+    "win": {
+      "url": "http://localhost:3000/releases/updapp/win/updapp.zip"
+    },
+    "linux32": {
+      "url": "http://localhost:3000/releases/updapp/linux32/updapp.tar.gz"
+    }
+  },
   "dependencies": {
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
@@ -27,7 +38,8 @@
     "opensubtitles-client": "*",
     "angular-material": "0.10.*",
     "md5": "2.*",
-    "node-localstorage": "0.5.*"
+    "node-localstorage": "0.5.*",
+    "node-webkit-updater": "0.2.*"
   },
   "devDependencies": {
     "less": "*",
