Cleanup package.json

--- a/app/package.json
+++ b/app/package.json
@@ -18,33 +18,26 @@
     }
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "jade": "~1.9.2",
+    "q": "1.*",
     "material-design-lite": "1.0.0-3",
     "material-design-icons": "*",
-    "morgan": "~1.5.3",
-    "q": "1.*",
-    "request": "*",
-    "movie-title": "*",
-    "parse-torrent-name": "*",
+    "request": "2.*",
+    "movie-title": "0.0.1",
+    "parse-torrent-name": "0.5.*",
     "scene-release": "1.*",
-    "serve-favicon": "~2.2.1",
     "xmlrpc": "1.3.*",
-    "object.observe": "*",
-    "observed": "*",
-    "opensubtitles-client": "*",
-    "angular-material": "0.10.*",
+    "observed": "1.1.*",
+    "opensubtitles-client": "2.4.*",
     "md5": "2.*",
     "node-localstorage": "0.5.*",
     "node-webkit-updater": "0.2.*"
   },
   "devDependencies": {
-    "less": "*",
-    "nw": "*",
-    "gulp": "*",
+    "debug": "~2.2.0",
+    "object.observe": "2.4.*",
+    "less": "2.*",
+    "nw": "0.12.*",
+    "gulp": "3.9.*",
     "mocha": "*"
   },
   "window": {
