--- a/app/package.json
+++ b/app/package.json
@@ -22,10 +22,11 @@
     "xmlrpc": "1.3.*"
   },
   "devDependencies": {
+    "nw": "*",
+    "nw-builder": "2.*",
     "debug": "~2.2.0",
     "object.observe": "0.2.*",
     "less": "2.*",
-    "nw": "*",
     "gulp": "3.9.*",
     "mocha": "*"
   },
