--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "DogTitle",
   "version": "0.0.9",
   "private": true,
-  "main": "index.html",
+  "main": "app.html",
   "scripts": {
     "start": "nw --remote-debugging-port=9090",
     "build": "grunt",
@@ -19,7 +19,14 @@
     "scene-release": "1.*",
     "observed": "1.1.*",
     "opensubtitles-client": "2.4.*",
-    "xmlrpc": "1.3.*"
+    "xmlrpc": "1.3.*",
+
+    "jquery": "2.1.*",
+    "backbone": "1.2.*",
+    "underscore": "1.8.*",
+    "backbone.babysitter": "0.1.*",
+    "backbone.wreqr": "1.3.*",
+    "backbone.marionette": "2.4.*"
   },
   "devDependencies": {
     "nw": "*",
