--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "opensubtitles-client": "2.4.*",
     "xmlrpc": "1.3.*",
 
+    "minimatch": "3.0.*",
+
     "jquery": "2.1.*",
     "backbone": "1.2.*",
     "underscore": "1.8.*",
